--- a/pom.xml
+++ b/pom.xml
@@ -43,9 +43,10 @@
         </profile>
     </profiles>
     <properties>
-        <siddhi.version>4.0.0-M7</siddhi.version>
+        <siddhi.version>4.0.0-M53</siddhi.version>
         <log4j.version>1.2.17.wso2v1</log4j.version>
-        <testng.version>6.8</testng.version>
+        <testng.version>6.11</testng.version>
+        <jacoco.version>0.7.9</jacoco.version>
         <unit.api.version>0.8</unit.api.version>
         <tec.unit.version>0.8</tec.unit.version>
     </properties>
@@ -91,6 +92,12 @@
                 <version>${testng.version}</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>org.jacoco</groupId>
+                <artifactId>org.jacoco.agent</artifactId>
+                <classifier>runtime</classifier>
+                <version>${jacoco.version}</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
@@ -103,6 +110,18 @@
                     <preparationGoals>clean install</preparationGoals>
                     <autoVersionSubmodules>true</autoVersionSubmodules>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.wso2.siddhi</groupId>
+                <artifactId>siddhi-doc-gen</artifactId>
+                <version>${siddhi.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>generate-md-docs</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
