Added Import Package. Bumped Siddhi Version.

--- a/component/pom.xml
+++ b/component/pom.xml
@@ -76,13 +76,14 @@
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Bundle-Name>${project.artifactId}</Bundle-Name>
                         <Private-Package>
-                            tec.units.ri.unit.*
                         </Private-Package>
                         <Export-Package>
-                            !tec.units.ri.unit.*,
+                            !tec.units.ri.*,
+                            javax.measure.*,
                             org.wso2.extension.siddhi.execution.unitconversion.*
                         </Export-Package>
                         <Import-Package>
+                            tec.units.ri.*,
                             *;resolution:=optional
                         </Import-Package>
                         <Include-Resource>
