--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,5 +16,6 @@ pages:
 - Welcome to WSO2 Siddhi Execution Unitconversion: index.md
 - API Docs:
   - 1.0.0-SNAPSHOT: api/1.0.0-SNAPSHOT.md
+  - 1.0.3-SNAPSHOT: api/1.0.3-SNAPSHOT.md
 - License: license.md
 theme: material
