--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
     </profiles>
     <properties>
         <siddhi.version>4.4.8</siddhi.version>
+        <siddhi.version.range>[4.0.0,5.0.0)</siddhi.version.range>
         <log4j.version>1.2.17.wso2v1</log4j.version>
         <testng.version>6.11</testng.version>
         <jacoco.maven.version>0.7.9</jacoco.maven.version>
