--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,13 +1,13 @@
 site_name: Siddhi Execution Unitconversion
 site_description: Siddhi Execution Unitconversion Extension
 site_author: WSO2
-site_url: https://wso2-extensions.github.io/siddhi-execution-unitconversion/
+site_url: https://siddhi-io.github.io/siddhi-execution-unitconversion/
 extra_css:
 - stylesheets/extra.css
 extra_javascript:
 - javascripts/extra.js
 repo_name: Siddhi-Execution-Unitconversion
-repo_url: https://github.com/wso2-extensions/siddhi-execution-unitconversion
+repo_url: https://github.com/siddhi-io/siddhi-execution-unitconversion
 copyright: Copyright &copy; 2011 - 2018 WSO2
 theme:
   name: material
