--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,37 +1,39 @@
-site_name: Siddhi Execution Unitconversion
-site_description: Siddhi Execution Unitconversion Extension
-site_author: WSO2
-site_url: https://siddhi-io.github.io/siddhi-execution-unitconversion/
-extra_css:
-- stylesheets/extra.css
-extra_javascript:
-- javascripts/extra.js
-repo_name: Siddhi-Execution-Unitconversion
-repo_url: https://github.com/siddhi-io/siddhi-execution-unitconversion
-copyright: Copyright &copy; 2011 - 2018 WSO2
+site_name: Siddhi Execution Unit Conversion
+site_description: Siddhi Execution Unit Conversion Extension
+repo_name: Siddhi Execution Unitconversion
+repo_url: https://github.com/siddhi-io/siddhi-execution-unitconversion/
+edit_uri: https://github.com/siddhi-io/siddhi-execution-unitconversion/blob/master/
+copyright: Siddhi - Documentation
 theme:
   name: material
-  logo: images/siddhi-logo-w.svg
+  logo: images/siddhi-logo.svg
   favicon: images/favicon.ico
   palette:
     primary: teal
     accent: teal
-google_analytics:
-- UA-103065-28
-- auto
+extra_css:
+- assets/stylesheets/extra.css
+extra_javascript:
+- assets/javascripts/extra.js
 extra:
   social:
   - type: github
-    link: https://github.com/wso2/siddhi
+    link: https://github.com/siddhi-io/siddhi
+  - type: medium
+    link: https://medium.com/siddhi-io
+  - type: twitter
+    link: https://twitter.com/siddhi_io
   - type: linkedin
     link: https://www.linkedin.com/groups/13553064
+google_analytics:
+- UA-103065-28
+- auto
 markdown_extensions:
-- admonition
-- toc(permalink=true)
-- codehilite(guess_lang=false)
+- markdown.extensions.admonition
 pages:
-- Welcome: index.md
+- Information: index.md
 - API Docs:
+  - latest: api/latest.md
   - 2.0.1: api/2.0.1.md
   - 2.0.0: api/2.0.0.md
   - 1.1.1: api/1.1.1.md
@@ -49,5 +51,4 @@ pages:
   - 1.0.7: api/1.0.7.md
   - 1.0.6: api/1.0.6.md
   - 1.0.5: api/1.0.5.md
-  - latest: api/latest.md
 - License: license.md
