--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,8 @@
  ~ specific language governing permissions and limitations
  ~ under the License.
 	 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.wso2</groupId>
@@ -52,8 +53,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
     <scm>
-        <connection>scm:git:https://github.com/siddhi-io/siddhi-execution-unitconversion.git
-        </connection>
+        <connection>scm:git:https://github.com/siddhi-io/siddhi-execution-unitconversion.git</connection>
         <url>https://github.com/siddhi-io/siddhi-execution-unitconversion.git</url>
         <developerConnection>
             scm:git:https://github.com/siddhi-io/siddhi-execution-unitconversion.git
